--- a/Done.html
+++ b/Done.html
@@ -19,7 +19,7 @@
 		<li>He will drink anything in sight.</li>
 		<li>He will hit or/and insult hot girls demanding them to do "The sexy time" or go into the kitchen.</li>
 		<li>Very primitive and agresive; will be your friend if given a SAC DIN RAFIE PLIN CU PALINCA(Moldovian Palinca)</li>
-		<li>Olso goes by his true name "King of CHICHI</li>
+		<li>Olso goes by his true name "King of CHICHI"</li>
 
 	</ol>
 	<img class="big-image" src="img/big-image.jpeg">
